# yt-transcript-fetcher

./: CHANGELOG.md  pyproject.toml
.github/workflows/: daily-tests.yml  run-tests.yml  semantic-release.yml
examples/: basic_usage.py
notebooks/: precondition-failed-troubleshooting.ipynb
tests/: test_api.py  test_models.py  test_protobuf.py
yt_transcript/: api.py  cli.py  exceptions.py  models.py
yt_transcript_fetcher/: api.py
