[project]
name = "yt-transcript"
version = "0.1.0"
description = "This library can be used to fetch transcripts for YouTube videos"
authors = [
    {name = "Dan Eagle",email = "dan@tyto.cc"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
