[project]
name = "yt-transcript-fetcher"
version = "1.1.1"
description = "This library can be used to fetch transcripts for YouTube videos"
authors = [{ name = "Dan Eagle", email = "dan@tyto.cc" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["youtube", "transcript", "yt-transcript", "yt", "video", "subtitle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["requests (>=2.32.4,<3.0.0)"]

[project.scripts]
yt-transcript = "yt_transcript.cli:main"

[dependency-groups]
dev = ["pytest>=8.4.0,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
